fix(pricing): resolve pricing todos